--- a/report.tex
+++ b/report.tex
@@ -251,87 +251,24 @@ To find patterns uniquely associated with undesirable forks, we need to gather d
 \begin{table} [H]
 \caption[Undesirable forking vs. Other categories]{The three types of projects for which data is collected in this study}
 \label{tableUndesirableForkingDataCollect} 
-\begin{tabular}{p{0.6\columnwidth} p{0.3\columnwidth}}
+\begin{tabular}{p{0.7\columnwidth} p{0.2\columnwidth}}
 \hline\noalign{\smallskip}
 \textbf{Type of forking} & \textbf{Abbreviation} \\
 \noalign{\smallskip}\hline\noalign{\smallskip}
-Undesirable forking & U.F. \\ \hline
-Other (Healthy/Other) forking & H.F. \\\hline
+Undesirable \& socially-related forking & U.F. \\ \hline
+Other (Healthy/Other) \& socially-related forking & H.F. \\\hline
 No forking at all & No.F. \\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table}
 
-To find projects in U.F. and H.F. categories, we looked at the list of all significant open source software forks in the past three decades as compiled by Robles and Gonzalez-Barahona \cite{Robles}. They found the reasons behind each fork, listed in Table \ref{tableReasonsForForking}. We applied three selection criteria to the 220 forked projects on that list to find projects in U.F. and H.F. categories. A project was short-listed as a U.F. or H.F. if \textbf{a)} the forking was recent, i.e., happened after the year 2000, \textbf{b)} its data was existent and available to access and download online, or was made accessible to us after our requests; and \textbf{c)} the project had a sizable developer community, i.e., more than a dozen developers, which means it would be large enough to make a sociogram for a meaningful statistical analysis. For the No.F. category, we chose well-known, stable projects that have been active long enough (to experience turbulence); and yet have not forked; and are similar in size of the development team. Similarity in size is a constrain that our statistical method imposes for the results to be meaningful, as described in detail in section \ref{statisticalModel}.  The preceding criteria resulted in the projects listed in Table \ref{forkedProjectsDataCollected}. 
+We define Undesirable Forking (U.F.) as the projects forked because of \textit{Personal differences among developers team}, or because of the need for \textit{more community-driven development}. One-fifth (20.5\%) of the 220 forked projects fall into this category.
 
-\begin{table}
-\centering
-\caption[List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.)]{List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.) \cite{Robles} in chronological order. U.A. means Unavailable}
-\label{tabelProjectsForkedCat1PersonalDiffereces}       
-\begin{tabular}{m{0.2\columnwidth} m{0.15\columnwidth} m{0.2\columnwidth} m{0.3\columnwidth} m{0.1\columnwidth}}
-\hline\noalign{\smallskip}
-\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
-\noalign{\smallskip}\hline\noalign{\smallskip}
-GNU Emacs & X Emacs & 1991, ? & Only after 2000 & U.A. \\ \hline
-NetBSD & OpenBSD & 1995, Oct & Yes, but scarce & U.A. \\ \hline
-xMule & aMule & 2003, Aug & Only 2006-2007 & U.A. \\ \hline
-lMule & xMule & 2003, Jun & No & U.A. \\ \hline
-Sodipodi & Inkscape & 2003, Nov & Yes & U.A.\\ \hline
-Nucleus CMS & Blog:CMS & 2004, May & Only after Sept 2004 & U.A. \\ \hline
-BMP & Audacious & 2005, Oct & Yes & U.A. \\ \hline
-ntfsprogs & NTFS-3G & 2006, Jul & No & U.A. \\ \hline
-OpenWRT & FreeWRT & 2006, May & Only after Oct 2006 & U.A. \\ \hline
-QtiPlot & SciDavis & 2007, Aug & No & U.A. \\ \hline
-Kamailio & OpenSIPS & 2008, Aug & Yes & Yes \\ \hline
-Blastwave.org & OpenCSW & 2008, Aug & No & U.A. \\ \hline
-jMonkeyEngine & Ardor3D & 2008, Sept & Yes, but scarce & U.A. \\ \hline
-Frog CMS & Wolf CMS & 2009, Jul & No & U.A. \\ \hline
-Aldrin & Neil & 2009, ? & No & U.A. \\ \hline
-Ffmpeg & libav & 2011, Mar & Yes & Yes\\
-\noalign{\smallskip}\hline
-\end{tabular}
-\end{table}
+Other (Healthy/Other) (H.F.) is defined as projects forked because of \textit{technical differences (Addition of functionality)}. More than a quarter (27.3\%) of the 220 forked projects fall into this category.
 
+These three categories are the socially-related categories, which means, the social context during the run-up to forking arguably should be reflected in their social interactions. 
 
-\begin{table}
-\centering
-\caption[List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.)]{List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.) \cite{Robles} in chronological order. U.A. means Unavailable}
-\label{tableProjectsForkedCat2CommunityDriven}
-\begin{tabular}{m{0.2\textwidth} m{0.2\textwidth} m{0.15\textwidth} m{0.2\textwidth} m{0.2\textwidth}}
-\hline\noalign{\smallskip}
-\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
-\noalign{\smallskip}\hline\noalign{\smallskip}
-Nethack & Slash'EM & 1996, ? & No & U.A. \\ \hline
-GCC & EGCS & 1997, ? & No & U.A. \\ \hline
-SourceForge & Savane & 2001, Oct & No & U.A. \\ \hline
-PHPNuke & PostNuke & 2001, Sum & Not found & U.A. \\ \hline
-QTExtended & OPIE & 2002, May & No & U.A. \\ \hline
-GraphicsMagick & Graphics & 2002, Nov  & Only after 2003 & U.A. \\ \hline
-\textbf{freeglut} & OpenGLUT & 2004, Mar & Yes & \textbf{Yes} \\ \hline
-Mambo & Joomla! & 2005, Aug & No & U.A. \\ \hline
-SER & Kamailio & 2005, Jun & Only after 2006 & U.A. \\ \hline
-PHPNuke & RavenNuke & 2005, Nov & Not found & U.A. \\ \hline
-Hula & Bongo & 2006, Dec & No & U.A. \\ \hline
-Compiere & A Dempiere & 2006, Sept & No Dev. mailing list & U.A. \\ \hline
-Compiz & Beryl & 2006, Sept & Only after Jun 2007 & U.A. \\ \hline
-SQL-Ledger & LedgerSMB & 2006, Sept & No Dev. mailing list & U.A. \\ \hline
-\textbf{Asterisk} & Callweaver & 2007, Jun & Yes & \textbf{Yes} \\ \hline
-CodeIgniter & KohanaPHP & 2007, May & Not found & U.A. \\ \hline
-OpenOffice.org & Go-oo.org & 2007, Oct & Only after Jun 2011 & U.A. \\ \hline
-Mambo & MiaCMS & 2008, May & No & U.A. \\ \hline
-TORCS & Speed Dreams & 2008, Nov & Yes, but scarce & U.A. \\ \hline
-MySQL & MariaDB & 2009, Jan & Yes, but too large & No\\ \hline
-Nagios & Icinga & 2009, May & Yes & Req \\ \hline
-Project Darkstar& RedDwarf & 2010, Feb & Yes, but scarce & U.A. \\ \hline
-SysCP & Froxlor & 2010, Feb & No & U.A. \\ \hline
-Dokeos & Chamilo & 2010, Jan & Not found & U.A. \\ \hline
-GNU Zebra & Quagga & 2010, Jul & No & U.A. \\ \hline
-\textbf{rdesktop} & FreeRDP & 2010, Mar & Yes & \textbf{Yes} \\ \hline
-OpenOffice.org & LibreOffice & 2010, Sept & Only after Jun 2011 & U.A. \\ \hline
-Redmine & ChiliProject & 2011, Feb & Yes, but scarce & U.A. \\
-\noalign{\smallskip}\hline
-\end{tabular}
-\end{table}
+To find projects in U.F. and H.F. categories, we looked at the list of all significant open source software forks in the past three decades as compiled by Robles and Gonzalez-Barahona \cite{Robles}. They found the reasons behind each fork, listed in Table \ref{tableReasonsForForking}. We applied three selection criteria to the 220 forked projects on that list to find projects in U.F. and H.F. categories. A project was short-listed as either a U.F. or H.F. if \textbf{a)} the forking was recent, i.e., happened after the year 2000, \textbf{b)} its data was existent and available to access and download online, or was made accessible to us after our requests; and \textbf{c)} the project had a sizable developer community, i.e., more than a dozen developers, which means it would be large enough to make a sociogram for a meaningful statistical analysis. For the No.F. category, we chose well-known, stable projects that have been active long enough (to experience turbulence; defined as two years); and yet have not forked; and are similar in size of the development team. Similarity in size is a constrain that our statistical method imposes for the results to be meaningful, as described in detail in section \ref{statisticalModel}.  The preceding criteria resulted in the projects listed in Table \ref{forkedProjectsDataCollected}. The rest of the 220 forked projects were discarded, because they did not meet the described filtering criteria.
 
 
 \begin{table}
@@ -799,9 +736,86 @@ I would also like to thank the open source developers of the projects studied fo
 
 \begin{appendices}
 
-\section{Appendix A: Initial study: Temporal analysis using the network-specific measurement approach}
+\section{Appendix A: List of all projects forked in U.F. and H.F. Categories}
+\label{tablesOfListsOfAllProjects}
+
+
+\begin{table} [H]
+\centering
+\caption[List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.)]{List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.) \cite{Robles} in chronological order. N/A means Unavailable}
+\label{tabelProjectsForkedCat1PersonalDiffereces}       
+\begin{tabular}{m{0.2\columnwidth} m{0.15\columnwidth} m{0.2\columnwidth} m{0.3\columnwidth} m{0.1\columnwidth}}
+\hline\noalign{\smallskip}
+\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
+\noalign{\smallskip}\hline\noalign{\smallskip}
+GNU Emacs & X Emacs & 1991, ? & Only after 2000 & N/A \\ \hline
+NetBSD & OpenBSD & 1995, Oct & Yes, but scarce & N/A \\ \hline
+xMule & aMule & 2003, Aug & Only 2006-2007 & N/A \\ \hline
+lMule & xMule & 2003, Jun & No & N/A \\ \hline
+Sodipodi & Inkscape & 2003, Nov & Yes & N/A\\ \hline
+Nucleus CMS & Blog:CMS & 2004, May & Only after Sept 2004 & N/A \\ \hline
+BMP & Audacious & 2005, Oct & Yes & N/A \\ \hline
+ntfsprogs & NTFS-3G & 2006, Jul & No & N/A \\ \hline
+OpenWRT & FreeWRT & 2006, May & Only after Oct 2006 & N/A \\ \hline
+QtiPlot & SciDavis & 2007, Aug & No & N/A \\ \hline
+Kamailio & OpenSIPS & 2008, Aug & Yes & Yes \\ \hline
+Blastwave.org & OpenCSW & 2008, Aug & No & N/A \\ \hline
+jMonkeyEngine & Ardor3D & 2008, Sept & Yes, but scarce & N/A \\ \hline
+Frog CMS & Wolf CMS & 2009, Jul & No & N/A \\ \hline
+Aldrin & Neil & 2009, ? & No & N/A \\ \hline
+Ffmpeg & libav & 2011, Mar & Yes & Yes\\
+\noalign{\smallskip}\hline
+\end{tabular}
+\end{table}
+
+\pagebreak
+
+\begin{table} [H]
+\centering
+\caption[List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.)]{List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.) \cite{Robles} in chronological order. N/A means Unavailable}
+\label{tableProjectsForkedCat2CommunityDriven}
+\begin{tabular}{m{0.2\textwidth} m{0.2\textwidth} m{0.15\textwidth} m{0.2\textwidth} m{0.2\textwidth}}
+\hline\noalign{\smallskip}
+\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
+\noalign{\smallskip}\hline\noalign{\smallskip}
+Nethack & Slash'EM & 1996, ? & No & N/A \\ \hline
+GCC & EGCS & 1997, ? & No & N/A \\ \hline
+SourceForge & Savane & 2001, Oct & No & N/A \\ \hline
+PHPNuke & PostNuke & 2001, Sum & Not found & N/A \\ \hline
+QTExtended & OPIE & 2002, May & No & N/A \\ \hline
+GraphicsMagick & Graphics & 2002, Nov  & Only after 2003 & N/A \\ \hline
+\textbf{freeglut} & OpenGLUT & 2004, Mar & Yes & \textbf{Yes} \\ \hline
+Mambo & Joomla! & 2005, Aug & No & N/A \\ \hline
+SER & Kamailio & 2005, Jun & Only after 2006 & N/A \\ \hline
+PHPNuke & RavenNuke & 2005, Nov & Not found & N/A \\ \hline
+Hula & Bongo & 2006, Dec & No & N/A \\ \hline
+Compiere & A Dempiere & 2006, Sept & No Dev. mailing list & N/A \\ \hline
+Compiz & Beryl & 2006, Sept & Only after Jun 2007 & N/A \\ \hline
+SQL-Ledger & LedgerSMB & 2006, Sept & No Dev. mailing list & N/A \\ \hline
+\textbf{Asterisk} & Callweaver & 2007, Jun & Yes & \textbf{Yes} \\ \hline
+CodeIgniter & KohanaPHP & 2007, May & Not found & N/A \\ \hline
+OpenOffice.org & Go-oo.org & 2007, Oct & Only after Jun 2011 & N/A \\ \hline
+Mambo & MiaCMS & 2008, May & No & N/A \\ \hline
+TORCS & Speed Dreams & 2008, Nov & Yes, but scarce & N/A \\ \hline
+MySQL & MariaDB & 2009, Jan & Yes, but too large & No\\ \hline
+Nagios & Icinga & 2009, May & Yes & Req \\ \hline
+Project Darkstar& RedDwarf & 2010, Feb & Yes, but scarce & N/A \\ \hline
+SysCP & Froxlor & 2010, Feb & No & N/A \\ \hline
+Dokeos & Chamilo & 2010, Jan & Not found & N/A \\ \hline
+GNU Zebra & Quagga & 2010, Jul & No & N/A \\ \hline
+\textbf{rdesktop} & FreeRDP & 2010, Mar & Yes & \textbf{Yes} \\ \hline
+OpenOffice.org & LibreOffice & 2010, Sept & Only after Jun 2011 & N/A \\ \hline
+Redmine & ChiliProject & 2011, Feb & Yes, but scarce & N/A \\
+\noalign{\smallskip}\hline
+\end{tabular}
+\end{table}
+
+\pagebreak
+
+
+\section{Appendix B: Initial study: Temporal analysis using the network-specific measurement approach}
 \label{sectionInitialStudy}
-In our initial study\cite{AzarbakhtOpenSym2013}\cite{AzarbakhtOSS2013}\cite{AzarbakhtVLHCC2014}, which was a network-specific study, we wanted to analyze the network-specific changes that happen to the community over a given period of time, e.g., three months before and three months after the year in which the forking event happened. For this network-specific study, we measured the betweenness centrality \cite{Brandes} of the most significant nodes in the graph, and the graph diameter over time. Figures \ref{figureKamailioStackedAreaChart}, \ref{figureAmarokStachedAreaChart}, and \ref{figureAsteriskStackedAreaChart} show the betweenness centralities over the 1.5 year period for the Kamailio, Amarok and Asterisk projects respectively. To do temporal analysis, we had two options; 1) look at snapshots of the network state over time, (e.g., to look at the network snapshots in every week, the same way that a video is composed of many consecutive frames), and 2) look at a period through a time window. We preferred the second approach, and looked through a time window three months wide with 1.5 month overlaps. To create the visualizations, we used a 3 months time frame that progressed six days a frame. In this way, we would have had a relatively smooth transition.
+In our initial study \cite{AzarbakhtOpenSym2013}\cite{AzarbakhtOSS2013}\cite{AzarbakhtVLHCC2014}, which was a network-specific study, we wanted to analyze the network-specific changes that happen to the community over a given period of time, e.g., three months before and three months after the year in which the forking event happened. For this network-specific study, we measured the betweenness centrality \cite{Brandes} of the most significant nodes in the graph, and the graph diameter over time. Figures \ref{figureKamailioStackedAreaChart}, \ref{figureAmarokStachedAreaChart}, and \ref{figureAsteriskStackedAreaChart} show the betweenness centralities over the 1.5 year period for the Kamailio, Amarok and Asterisk projects respectively. To do temporal analysis, we had two options; 1) look at snapshots of the network state over time, (e.g., to look at the network snapshots in every week, the same way that a video is composed of many consecutive frames), and 2) look at a period through a time window. We preferred the second approach, and looked through a time window three months wide with 1.5 month overlaps. To create the visualizations, we used a 3 months time frame that progressed six days a frame. In this way, we would have had a relatively smooth transition.
 
 \begin{figure}[!ht]
 \centering
