--- a/report.tex
+++ b/report.tex
@@ -736,31 +736,31 @@ I would also like to thank the open source developers of the projects studied fo
 
 \begin{appendices}
 
-\section{Appendix A: List of all projects forked in U.F. and H.F. Categories}
+\section{Appendix A: List of all projects forked in socially-related Undesirable Forking (U.F.) Category}
 \label{tablesOfListsOfAllProjects}
 
 
 \begin{table} [H]
 \centering
-\caption[List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.)]{List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.) \cite{Robles} in chronological order. N/A means Unavailable}
+\caption[List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.)]{List of all projects forked because of ``\textit{personal differences among the developer team}'' (U.F.) \cite{Robles} in chronological order. N/A means Not Applicable}
 \label{tabelProjectsForkedCat1PersonalDiffereces}       
-\begin{tabular}{m{0.2\columnwidth} m{0.15\columnwidth} m{0.2\columnwidth} m{0.3\columnwidth} m{0.1\columnwidth}}
+\begin{tabular}{m{0.2\columnwidth} m{0.15\columnwidth} m{0.15\columnwidth} m{0.3\columnwidth} m{0.1\columnwidth}}
 \hline\noalign{\smallskip}
-\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
+\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data accessible?} & \textbf{Collected?}\\
 \noalign{\smallskip}\hline\noalign{\smallskip}
-GNU Emacs & X Emacs & 1991, ? & Only after 2000 & N/A \\ \hline
-NetBSD & OpenBSD & 1995, Oct & Yes, but scarce & N/A \\ \hline
-xMule & aMule & 2003, Aug & Only 2006-2007 & N/A \\ \hline
+GNU Emacs & X Emacs & 1991, ? & No, only after 2000 & N/A \\ \hline
+NetBSD & OpenBSD & 1995, Oct & Yes, scarce, unusable & N/A \\ \hline
+xMule & aMule & 2003, Aug & No, only 2006-2007 & N/A \\ \hline
 lMule & xMule & 2003, Jun & No & N/A \\ \hline
-Sodipodi & Inkscape & 2003, Nov & Yes & N/A\\ \hline
-Nucleus CMS & Blog:CMS & 2004, May & Only after Sept 2004 & N/A \\ \hline
-BMP & Audacious & 2005, Oct & Yes & N/A \\ \hline
+Sodipodi & Inkscape & 2003, Nov & No & N/A\\ \hline
+Nucleus CMS & Blog:CMS & 2004, May & No, only after 09/2004 & N/A \\ \hline
+BMP & Audacious & 2005, Oct & No & N/A \\ \hline
 ntfsprogs & NTFS-3G & 2006, Jul & No & N/A \\ \hline
-OpenWRT & FreeWRT & 2006, May & Only after Oct 2006 & N/A \\ \hline
+OpenWRT & FreeWRT & 2006, May & No, only after 10/2006 & N/A \\ \hline
 QtiPlot & SciDavis & 2007, Aug & No & N/A \\ \hline
 Kamailio & OpenSIPS & 2008, Aug & Yes & Yes \\ \hline
 Blastwave.org & OpenCSW & 2008, Aug & No & N/A \\ \hline
-jMonkeyEngine & Ardor3D & 2008, Sept & Yes, but scarce & N/A \\ \hline
+jMonkeyEngine & Ardor3D & 2008, Sept & Yes, scarce, unusable & N/A \\ \hline
 Frog CMS & Wolf CMS & 2009, Jul & No & N/A \\ \hline
 Aldrin & Neil & 2009, ? & No & N/A \\ \hline
 Ffmpeg & libav & 2011, Mar & Yes & Yes\\
@@ -772,40 +772,40 @@ Ffmpeg & libav & 2011, Mar & Yes & Yes\\
 
 \begin{table} [H]
 \centering
-\caption[List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.)]{List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.) \cite{Robles} in chronological order. N/A means Unavailable}
+\caption[List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.)]{List of all projects forked because of the need for ``\textit{more community-driven development}'' (U.F.) \cite{Robles} in chronological order. N/A means Not Applicable}
 \label{tableProjectsForkedCat2CommunityDriven}
-\begin{tabular}{m{0.2\textwidth} m{0.2\textwidth} m{0.15\textwidth} m{0.2\textwidth} m{0.2\textwidth}}
+\begin{tabular}{m{0.2\textwidth} m{0.2\textwidth} m{0.15\textwidth} m{0.3\textwidth} m{0.2\textwidth}}
 \hline\noalign{\smallskip}
-\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data available?} & \textbf{Collected?}\\
+\textbf{Original} & \textbf{Forked} & \textbf{Date} & \textbf{M.L. data accessible?} & \textbf{Collected?}\\
 \noalign{\smallskip}\hline\noalign{\smallskip}
 Nethack & Slash'EM & 1996, ? & No & N/A \\ \hline
 GCC & EGCS & 1997, ? & No & N/A \\ \hline
 SourceForge & Savane & 2001, Oct & No & N/A \\ \hline
-PHPNuke & PostNuke & 2001, Sum & Not found & N/A \\ \hline
+PHPNuke & PostNuke & 2001, Sum & No, not found & N/A \\ \hline
 QTExtended & OPIE & 2002, May & No & N/A \\ \hline
-GraphicsMagick & Graphics & 2002, Nov  & Only after 2003 & N/A \\ \hline
-\textbf{freeglut} & OpenGLUT & 2004, Mar & Yes & \textbf{Yes} \\ \hline
+GraphicsMagick & Graphics & 2002, Nov  & No, only after 2003 & N/A \\ \hline
+freeglut & OpenGLUT & 2004, Mar & Yes & Yes \\ \hline
 Mambo & Joomla! & 2005, Aug & No & N/A \\ \hline
-SER & Kamailio & 2005, Jun & Only after 2006 & N/A \\ \hline
-PHPNuke & RavenNuke & 2005, Nov & Not found & N/A \\ \hline
+SER & Kamailio & 2005, Jun & No, only after 2006 & N/A \\ \hline
+PHPNuke & RavenNuke & 2005, Nov & No, not found & N/A \\ \hline
 Hula & Bongo & 2006, Dec & No & N/A \\ \hline
-Compiere & A Dempiere & 2006, Sept & No Dev. mailing list & N/A \\ \hline
-Compiz & Beryl & 2006, Sept & Only after Jun 2007 & N/A \\ \hline
-SQL-Ledger & LedgerSMB & 2006, Sept & No Dev. mailing list & N/A \\ \hline
-\textbf{Asterisk} & Callweaver & 2007, Jun & Yes & \textbf{Yes} \\ \hline
-CodeIgniter & KohanaPHP & 2007, May & Not found & N/A \\ \hline
-OpenOffice.org & Go-oo.org & 2007, Oct & Only after Jun 2011 & N/A \\ \hline
+Compiere & A Dempiere & 2006, Sept & No & N/A \\ \hline
+Compiz & Beryl & 2006, Sept & No, only after 06/2007 & N/A \\ \hline
+SQL-Ledger & LedgerSMB & 2006, Sept & No & N/A \\ \hline
+Asterisk & Callweaver & 2007, Jun & Yes & Yes \\ \hline
+CodeIgniter & KohanaPHP & 2007, May & No, not found & N/A \\ \hline
+OpenOffice.org & Go-oo.org & 2007, Oct & No, only after 06/2011 & N/A \\ \hline
 Mambo & MiaCMS & 2008, May & No & N/A \\ \hline
-TORCS & Speed Dreams & 2008, Nov & Yes, but scarce & N/A \\ \hline
-MySQL & MariaDB & 2009, Jan & Yes, but too large & No\\ \hline
-Nagios & Icinga & 2009, May & Yes & Req \\ \hline
-Project Darkstar& RedDwarf & 2010, Feb & Yes, but scarce & N/A \\ \hline
+TORCS & Speed Dreams & 2008, Nov & Yes, scarce, unusable & N/A \\ \hline
+MySQL & MariaDB & 2009, Jan & Yes, too large, unusable & N/A\\ \hline
+Nagios & Icinga & 2009, May & No & N/A \\ \hline
+Project Darkstar& RedDwarf & 2010, Feb & Yes, scarce, unusable & N/A \\ \hline
 SysCP & Froxlor & 2010, Feb & No & N/A \\ \hline
-Dokeos & Chamilo & 2010, Jan & Not found & N/A \\ \hline
+Dokeos & Chamilo & 2010, Jan & No, not found & N/A \\ \hline
 GNU Zebra & Quagga & 2010, Jul & No & N/A \\ \hline
-\textbf{rdesktop} & FreeRDP & 2010, Mar & Yes & \textbf{Yes} \\ \hline
-OpenOffice.org & LibreOffice & 2010, Sept & Only after Jun 2011 & N/A \\ \hline
-Redmine & ChiliProject & 2011, Feb & Yes, but scarce & N/A \\
+rdesktop & FreeRDP & 2010, Mar & Yes & Yes \\ \hline
+OpenOffice.org & LibreOffice & 2010, Sept & No, only after 06/2011 & N/A \\ \hline
+Redmine & ChiliProject & 2011, Feb & Yes, scarce, unusable & N/A \\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table}
